@@ -1,6 +1,10 @@
 Version 3.1.0 beta to be released
 =================================
 ENH: Added PRADO_CHMOD constant so that users can specify the permission of PRADO-created directories (Qiang)
+ENH: Ticket#519 - Update TActiveRecord implementation (Wei)
+ENH: Add Display property to TWebControl (Wei)
+BUG: Ticket#517 - Quickstart I18N sample: conflicting module ID (Wei)
+BUG: Ticket#521 - comment tag on TActiveButton stop callback (Wei)
 
 Version 3.1.0 alpha January 15, 2007
 ====================================
